--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </script>
   </head>
   <body>
+    This is test page for Online Rocket Designer
     <canvas id="myCanvas"></canvas>
   </body>
 </html>
