--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         }
       }
     </script>
+    <title>Online Rocket Designer</title>
   </head>
   <body>
     This is test page for Online Rocket Designer
