--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <title>Online Rocket Designer</title>
   </head>
   <body>
-    This is test page for Online Rocket Designer
+    This is test page for Online Rocket Designer<br>
     <canvas id="myCanvas"></canvas>
   </body>
 </html>
