--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
       }
     </script>
-    <title>Online Rocket Designer</title>
+    <title>Online Rocket Designer ver0.5</title>
   </head>
   <body>
     This is test page for Online Rocket Designer<br>
