--- a/camera_orbitcontrols.html
+++ b/camera_orbitcontrols.html
@@ -41,7 +41,7 @@
 
         // マテリアルを作成
         const material = new THREE.MeshStandardMaterial({
-          map: new THREE.TextureLoader().load('imgs/earthmap1k.jpg'),
+          map: new THREE.TextureLoader().load('image/A0F40132-2DA7-4429-916D-040851785D98.jpeg'),
         });
 
         // 球体の形状を作成します
